从es中拿数据
